# Leo-ToDo

./: TODO.db  main.py  pyproject.toml  requirements.txt
static/css/: auth.css  home.css  main.css
static/js/: home.js
templates/: base.html  index.html  login.html  main.html  signup.html
